# MetaCAT

./: README.md  pyproject.toml
Benchmarks/: README.md
Datasets/: README.md
Dependencies/: README.md  fastANI  hmmalign  hmmsearch  skani
Documentation/: README.md
Examples/: Covariate.tsv  Group.tsv  Phenotype.tsv  README.md
IndexBam/: README.md  indexBam-linux  indexBam-macos
MetaCAT/: FragGeneScan-Linux-x86_64  FragGeneScan-darwin-arm64  __init__.py  abundance.py  abundance_test.py  affinity_model.py  bam-Darwin-arm64.dylib  bam-darwin-arm64.dylib  bam.c  bam.h  bam.py  benchmark_gt.py  benchmark_rw.py  bgzf.c  bgzf.h  c.py  checkm2.py  cluster.py  cluster2mapping.py  color-Darwin-arm64.dylib  color-darwin-arm64.dylib  color.c  colors.py  coverage.py  coverage_model.py  fasta.py  fastani.py  fraggenescan.py  gtdbtk.py  hmm.py  hmmpress-Darwin-arm64  hmmpress-Linux-x86_64  hmmsearch-Darwin-arm64  hmmsearch-linux-x86_64  hook.py  index_bam.py  io_test.py  kmer.py  kmer_frequency_model.py  label_propagation.py  (+14 more)
indexBam/: indexBam-linux  indexBam-macos
